Revert "keep the socket open"
This reverts commit 72cbab1714649661145ea8d90269cdd45101303d.